[gd_scene load_steps=11 format=3 uid="uid://cbpbwbt3gb260"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7gt0r"]
[ext_resource type="PackedScene" uid="uid://7gp3tb8il7xm" path="res://scenes/player.tscn" id="2_4h0qy"]
[ext_resource type="PackedScene" uid="uid://bkcylhhj61hqa" path="res://scenes/builder.tscn" id="3_2cp71"]
[ext_resource type="PackedScene" uid="uid://cq78ane1yx2ai" path="res://scenes/platform.tscn" id="4_tvgra"]
[ext_resource type="PackedScene" uid="uid://bek1l3fn70tlf" path="res://scenes/pole.tscn" id="5_0yrbi"]
[ext_resource type="PackedScene" uid="uid://ceelw5x4xkrhp" path="res://scenes/coin.tscn" id="6_tbgy5"]
[ext_resource type="PackedScene" uid="uid://1fa4xsk6l5dk" path="res://scenes/cannon.tscn" id="7_6gntm"]
[ext_resource type="PackedScene" uid="uid://caujxb4kadxl3" path="res://scenes/bomb.tscn" id="8_qpn4l"]
[ext_resource type="PackedScene" uid="uid://r3syd6iec5ib" path="res://scenes/panic.tscn" id="9_2x36s"]
[ext_resource type="PackedScene" uid="uid://dy3q78jku1yia" path="res://scenes/panic_spawner.tscn" id="10_sjkyb"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7gt0r")

[node name="Player" parent="." instance=ExtResource("2_4h0qy")]

[node name="Builder" parent="." instance=ExtResource("3_2cp71")]

[node name="Builder" parent="Builder" index="0" node_paths=PackedStringArray("worldmap")]
platform = ExtResource("4_tvgra")
pole = ExtResource("5_0yrbi")
worldmap = NodePath("../..")
coins = ExtResource("6_tbgy5")

[node name="Cannon" parent="." node_paths=PackedStringArray("worldmap") instance=ExtResource("7_6gntm")]
position = Vector2(-2284, -1262)
worldmap = NodePath("..")
bombs = ExtResource("8_qpn4l")
higher_range = 90

[node name="Cannon2" parent="." node_paths=PackedStringArray("worldmap") instance=ExtResource("7_6gntm")]
position = Vector2(2283, 1264)
worldmap = NodePath("..")
bombs = ExtResource("8_qpn4l")
lower_range = -180
higher_range = -90

[node name="Panic" parent="." instance=ExtResource("9_2x36s")]

[node name="PanicSpawner" parent="." node_paths=PackedStringArray("worldmap") instance=ExtResource("10_sjkyb")]
position = Vector2(0, -925)
amount = 20
worldmap = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Win" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -565.5
offset_top = 24.0
offset_right = 565.5
offset_bottom = 161.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "You Saved the Fortress!"

[node name="Death" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -565.5
offset_top = 24.0
offset_right = 565.5
offset_bottom = 161.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "You Failed"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 121.0
one_shot = true
autostart = true

[node name="TimeLeft" type="Label" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 11.0
offset_right = 52.0
offset_bottom = 34.0
text = "0:00"

[node name="Coins" type="Label" parent="CanvasLayer"]
offset_left = 65.0
offset_top = 11.0
offset_right = 155.0
offset_bottom = 34.0
text = "Coins left: 0"

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_timer_timeout"]

[editable path="Builder"]
